--- a/Models/AllModels_P2.ipynb
+++ b/Models/AllModels_P2.ipynb
@@ -22,8 +22,8 @@
    "outputs": [],
    "source": [
     "\n",
-    "# Load the data (assuming you are in the same session)\n",
-    "# df = pd.read_csv('data/train.csv') # Uncomment if you need to reload\n",
+    "# Load the data\n",
+    "\n",
     "\n",
     "def clean_data(df):\n",
     "    # 1. Drop Duplicates\n",
@@ -55,7 +55,6 @@
     "    df['start_age'] = df['founder_age'] - df['years_with_startup']\n",
     "    \n",
     "    # 5. Encoding Target\n",
-    "    # Stayed -> 0, Left -> 1 (Standard for Churn/Exit prediction)\n",
     "    target_map = {'Stayed': 0, 'Left': 1}\n",
     "    df['target'] = df['retention_status'].map(target_map)\n",
     "    \n",
@@ -84,8 +83,7 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "def encode_and_split(df):\n",
-    "    # --- 1. ORDINAL ENCODING (Preserving Order) ---\n",
-    "    # We manually map these so the model knows 'Excellent' is better than 'Poor'\n",
+    "   \n",
     "    \n",
     "    rating_map = {'Unknown': 0, 'Low': 1, 'Poor': 1, 'Below Average': 2, \n",
     "                  'Fair': 3, 'Medium': 3, 'Average': 3, \n",
@@ -109,22 +107,19 @@
     "    stage_map = {'Entry': 1, 'Mid': 2, 'Senior': 3, 'Growth': 3, 'Established': 4}\n",
     "    df['startup_stage'] = df['startup_stage'].map(stage_map).fillna(1)\n",
     "\n",
-    "    # --- 2. ONE-HOT ENCODING (Nominal Data) ---\n",
-    "    # For Gender, Role, Education, etc.\n",
-    "    # drop_first=True helps avoid multicollinearity (redundancy)\n",
+    "    # 2. ONE-HOT ENCODING (Nominal Data)\n",
     "    df = pd.get_dummies(df, columns=['founder_gender', 'founder_role', \n",
     "                                     'education_background', 'personal_status', \n",
     "                                     'team_size_category'], drop_first=True)\n",
     "\n",
-    "    # --- 3. SPLITTING ---\n",
+    "    # 3. SPLITTING \n",
     "    X = df.drop('target', axis=1)\n",
     "    y = df['target']\n",
     "    \n",
     "    # 80% Train, 20% Test\n",
     "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
     "    \n",
-    "    # --- 4. SCALING ---\n",
-    "    # Scale numerical features so age (e.g., 40) doesn't get overpowered by revenue (e.g., 5000)\n",
+    "    # 4. SCALING \n",
     "    scaler = StandardScaler()\n",
     "    X_train_scaled = scaler.fit_transform(X_train)\n",
     "    X_test_scaled = scaler.transform(X_test)\n",
@@ -166,19 +161,19 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# --- 1. Logistic Regression (The Baseline) ---\n",
+    "\n",
     "print(\"Training Logistic Regression...\")\n",
     "log_reg = LogisticRegression(random_state=42)\n",
     "log_reg.fit(X_train, y_train)\n",
     "y_pred_log = log_reg.predict(X_test)\n",
     "\n",
-    "# --- 2. Random Forest (The Complex Model) ---\n",
+    "\n",
     "print(\"Training Random Forest...\")\n",
     "rf_model = RandomForestClassifier(n_estimators=100, random_state=42)\n",
     "rf_model.fit(X_train, y_train)\n",
     "y_pred_rf = rf_model.predict(X_test)\n",
     "\n",
-    "# --- 3. Evaluation Helper Function ---\n",
+    "\n",
     "def evaluate_model(y_test, y_pred, model_name):\n",
     "    print(\"=\"*40)\n",
     "    print(f\"   {model_name} PERFORMANCE\")\n",
@@ -247,7 +242,7 @@
     "}\n",
     "\n",
     "# 2. Initialize Grid Search\n",
-    "# cv=3 means \"Cross-Validation\": it splits training data 3 ways to verify results internally\n",
+    "\n",
     "rf = RandomForestClassifier(random_state=42)\n",
     "grid_search = GridSearchCV(estimator=rf, param_grid=param_grid, \n",
     "                           cv=3, n_jobs=-1, verbose=2, scoring='accuracy')\n",
@@ -295,7 +290,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --- FINAL SUBMISSION PIPELINE ---\n",
+    "\n",
     "\n",
     "# 1. Load Data\n",
     "train = pd.read_csv('../data/train.csv')\n",
@@ -311,7 +306,7 @@
     "# 2. Apply the EXACT same cleaning as before\n",
     "def process_data(df):\n",
     "    # Drop duplicates (Only for train, be careful with test IDs!)\n",
-    "    # Actually, for submission, we usually keep test rows as-is to match IDs.\n",
+    "    \n",
     "    \n",
     "    # Cleaning\n",
     "    df['founder_age'] = df['founder_age'].clip(lower=18) # Fix underage instead of dropping\n",
@@ -365,7 +360,7 @@
     "X = train_final.drop(columns=['retention_status'])\n",
     "\n",
     "# Ensure Test has same columns as Train\n",
-    "X_test_submit = test_final[X.columns] # Reorder/filter columns\n",
+    "X_test_submit = test_final[X.columns] \n",
     "\n",
     "# 4. Scale\n",
     "scaler = StandardScaler()\n",
@@ -422,7 +417,7 @@
     "print(\"Training Gradient Boosting Model...\")\n",
     "\n",
     "# 1. Initialize the Model\n",
-    "# key params: learning_rate (how fast it learns), n_estimators (trees), max_depth (keep small!)\n",
+    "\n",
     "gbm = GradientBoostingClassifier(\n",
     "    n_estimators=200, \n",
     "    learning_rate=0.1, \n",
@@ -467,7 +462,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --- SUBMISSION WITH GBM ---\n",
+    "\n",
     "\n",
     "print(\"Retraining GBM on Full Data and generating submission...\")\n",
     "\n",
@@ -513,10 +508,9 @@
     "from sklearn.neural_network import MLPClassifier\n",
     "from sklearn.metrics import accuracy_score, classification_report\n",
     "\n",
-    "# --- 1. Support Vector Machine (SVM) ---\n",
+    "\n",
     "print(\"Training SVM... (This might take a few minutes, grab a coffee ☕)\")\n",
-    "# kernel='rbf' allows it to fit non-linear curves\n",
-    "# C=1.0 is the penalty parameter (Higher C = strict margin, Lower C = soft margin)\n",
+    "\n",
     "svm_model = SVC(kernel='rbf', C=1.0, random_state=42)\n",
     "svm_model.fit(X_train, y_train) # Make sure to use the SCALED X_train!\n",
     "\n",
@@ -524,10 +518,9 @@
     "svm_acc = accuracy_score(y_test, y_pred_svm)\n",
     "print(f\"SVM Accuracy: {svm_acc:.2%}\")\n",
     "\n",
-    "# --- 2. Neural Network (MLP) ---\n",
+    "\n",
     "print(\"\\nTraining Neural Network...\")\n",
-    "# hidden_layer_sizes=(64, 32): Two layers with 64 and 32 neurons\n",
-    "# max_iter=500: Allow it enough time to learn (converge)\n",
+    "\n",
     "mlp_model = MLPClassifier(hidden_layer_sizes=(64, 32), \n",
     "                          activation='relu', \n",
     "                          solver='adam', \n",
@@ -539,7 +532,7 @@
     "mlp_acc = accuracy_score(y_test, y_pred_mlp)\n",
     "print(f\"Neural Network Accuracy: {mlp_acc:.2%}\")\n",
     "\n",
-    "# --- 3. Quick Comparison Report ---\n",
+    "\n",
     "print(\"\\n\" + \"=\"*30)\n",
     "print(\"     MODEL LEADERBOARD     \")\n",
     "print(\"=\"*30)\n",
@@ -568,12 +561,11 @@
     "from sklearn.neural_network import MLPClassifier\n",
     "import pandas as pd\n",
     "\n",
-    "# Note: This assumes 'X_scaled', 'y', 'X_test_submit_scaled', and 'test' \n",
-    "# are already defined from the previous data preparation step.\n",
+    "\n",
     "\n",
     "inverse_map = {0: 'Stayed', 1: 'Left'}\n",
     "\n",
-    "# --- 1. SUBMISSION FOR SVM ---\n",
+    "\n",
     "print(\"Training SVM on Full Data... (This will take a few minutes)\")\n",
     "final_svm = SVC(kernel='rbf', C=1.0, random_state=42)\n",
     "final_svm.fit(X_scaled, y)\n",
@@ -590,7 +582,7 @@
     "print(\"Success! 'submission_svm.csv' saved.\")\n",
     "\n",
     "\n",
-    "# --- 2. SUBMISSION FOR NEURAL NETWORK ---\n",
+    "\n",
     "print(\"\\nTraining Neural Network on Full Data...\")\n",
     "final_mlp = MLPClassifier(\n",
     "    hidden_layer_sizes=(64, 32), \n",
