--- a/EDA/KnowingData.ipynb
+++ b/EDA/KnowingData.ipynb
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "98ceffe0",
    "metadata": {},
    "outputs": [
@@ -711,9 +711,9 @@
     "from scipy import stats\n",
     "from scipy.stats import chi2_contingency\n",
     "\n",
-    "# --- CONFIGURATION ---\n",
+    "\n",
     "sns.set(style=\"whitegrid\")\n",
-    "# Adjust this path if your file is in a different location\n",
+    "\n",
     "DATA_PATH = '../data/train.csv'\n",
     "\n",
     "try:\n",
@@ -724,9 +724,7 @@
     "    print(f\"Error: File not found at {DATA_PATH}. Please check the path.\")\n",
     "    exit()\n",
     "\n",
-    "# ==============================================================================\n",
-    "# PART 1: NUMERICAL DISTRIBUTION & SKEW (The \"MRI\")\n",
-    "# ==============================================================================\n",
+    "\n",
     "print(\"\\n\" + \"=\"*60)\n",
     "print(\"      PART 1: NUMERICAL DISTRIBUTION & SKEW ANALYSIS\")\n",
     "print(\"=\"*60)\n",
@@ -755,8 +753,7 @@
     "print(\"\\nDISTRIBUTION HEALTH CHECK:\")\n",
     "print(dist_summary.sort_values(by='Skewness', key=abs, ascending=False))\n",
     "\n",
-    "# --- VISUALIZATION: Histograms + Q-Q Plots ---\n",
-    "# Identify skewed columns for plotting\n",
+    "\n",
     "skewed_cols = dist_summary[dist_summary['Recommendation'].str.contains(\"Transform\")].index.tolist()\n",
     "\n",
     "if len(skewed_cols) > 0:\n",
@@ -782,9 +779,7 @@
     "    print(\"\\nNo heavily skewed columns found (Skewness < 1.0).\")\n",
     "\n",
     "\n",
-    "# ==============================================================================\n",
-    "# PART 2: CATEGORICAL PREDICTIVE POWER (Cramer's V)\n",
-    "# ==============================================================================\n",
+    "\n",
     "print(\"\\n\" + \"=\"*60)\n",
     "print(\"      PART 2: CATEGORICAL FEATURE STRENGTH (CRAMER'S V)\")\n",
     "print(\"=\"*60)\n",
@@ -828,9 +823,9 @@
     "print(\"\\nSTRENGTH OF ASSOCIATION WITH TARGET (0.0 to 1.0):\")\n",
     "print(cat_corr_df)\n",
     "\n",
-    "# --- VISUALIZATION: Feature Importance Bar Plot ---\n",
+    "\n",
     "plt.figure(figsize=(10, 8))\n",
-    "# FIX: Added hue and legend=False to fix the FutureWarning\n",
+    "\n",
     "sns.barplot(\n",
     "    x=cat_corr_df.Cramers_V, \n",
     "    y=cat_corr_df.index, \n",
@@ -846,9 +841,7 @@
     "plt.show()\n",
     "\n",
     "\n",
-    "# ==============================================================================\n",
-    "# PART 3: MULTIVARIATE INTERACTIONS (3D Analysis)\n",
-    "# ==============================================================================\n",
+    "\n",
     "print(\"\\n\" + \"=\"*60)\n",
     "print(\"      PART 3: MULTIVARIATE INTERACTIONS & PATTERNS\")\n",
     "print(\"=\"*60)\n",
@@ -868,7 +861,7 @@
     "plt.show()\n",
     "\n",
     "# 2. Violin Plot: Satisfaction vs Revenue\n",
-    "# Check if \"Money\" (Revenue) compensates for \"Happiness\" (Satisfaction)\n",
+    "\n",
     "if 'venture_satisfaction' in df.columns:\n",
     "    plt.figure(figsize=(12, 6))\n",
     "    sns.violinplot(\n",
@@ -884,10 +877,9 @@
     "    plt.tight_layout()\n",
     "    plt.show()\n",
     "\n",
-    "# 3. Pairplot for Key Numerical Factors\n",
-    "# A quick glance at the relationships between the most important numeric vars\n",
+    "\n",
     "key_numeric = ['founder_age', 'years_with_startup', 'monthly_revenue_generated', 'retention_status']\n",
-    "# Ensure columns exist before plotting\n",
+    "\n",
     "plot_cols = [c for c in key_numeric if c in df.columns]\n",
     "\n",
     "if len(plot_cols) > 1:\n",
@@ -903,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "383a3959",
    "metadata": {},
    "outputs": [
@@ -1118,9 +1110,9 @@
     "import seaborn as sns\n",
     "import os\n",
     "\n",
-    "# --- CONFIGURATION ---\n",
+    "\n",
     "sns.set(style=\"whitegrid\")\n",
-    "plt.rcParams['figure.max_open_warning'] = 50 # Allow many plots\n",
+    "plt.rcParams['figure.max_open_warning'] = 50 \n",
     "\n",
     "# Load Data\n",
     "possible_paths = ['../data/train.csv', 'train.csv']\n",
@@ -1136,9 +1128,7 @@
     "    print(f\"✅ Data Loaded from {DATA_PATH}\")\n",
     "    df = pd.read_csv(DATA_PATH)\n",
     "\n",
-    "    # ==============================================================================\n",
-    "    # 1. THE MASTER CORRELATION HEATMAP (Numerical Only)\n",
-    "    # ==============================================================================\n",
+    "    \n",
     "    print(\"\\n\" + \"=\"*60)\n",
     "    print(\"      1. MASTER CORRELATION HEATMAP\")\n",
     "    print(\"=\"*60)\n",
@@ -1150,7 +1140,6 @@
     "        numeric_df = numeric_df.drop(columns=['founder_id'])\n",
     "    \n",
     "    plt.figure(figsize=(12, 10))\n",
-    "    # mask=np.triu(...) hides the upper triangle (since it's a mirror image)\n",
     "    mask = np.triu(np.ones_like(numeric_df.corr(), dtype=bool))\n",
     "    \n",
     "    sns.heatmap(\n",
@@ -1166,9 +1155,7 @@
     "    plt.tight_layout()\n",
     "    plt.show()\n",
     "\n",
-    "    # ==============================================================================\n",
-    "    # 2. NUMERICAL FEATURES vs TARGET (Boxplots)\n",
-    "    # ==============================================================================\n",
+    "\n",
     "    print(\"\\n\" + \"=\"*60)\n",
     "    print(\"      2. COMPARING NUMERICAL INPUTS WITH OUTPUT\")\n",
     "    print(\"      (Look for shift in the box/median)\")\n",
@@ -1187,7 +1174,7 @@
     "    for i, col in enumerate(num_cols):\n",
     "        ax = plt.subplot(n_rows, n_cols, i+1)\n",
     "        \n",
-    "        # Boxplot: Great for seeing if the \"Average\" or \"Spread\" is different\n",
+    "\n",
     "        sns.boxplot(\n",
     "            data=df, \n",
     "            x='retention_status', \n",
@@ -1203,9 +1190,7 @@
     "    plt.tight_layout()\n",
     "    plt.show()\n",
     "\n",
-    "    # ==============================================================================\n",
-    "    # 3. CATEGORICAL FEATURES vs TARGET (Stacked Bar Charts)\n",
-    "    # ==============================================================================\n",
+    "\n",
     "    print(\"\\n\" + \"=\"*60)\n",
     "    print(\"      3. COMPARING CATEGORICAL INPUTS WITH OUTPUT\")\n",
     "    print(\"      (Look for bars with different Red/Blue proportions)\")\n",
