--- a/Preprocessing/P3_preprocess.ipynb
+++ b/Preprocessing/P3_preprocess.ipynb
@@ -2,51 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e18a152c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training data shape: (59611, 22)\n",
-      "Submission data shape: (14900, 22)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "# --- 1. LOAD DATA ---\n",
     "train = pd.read_csv('../data/train.csv')\n",
     "test = pd.read_csv('../data/test.csv')\n",
     "\n",
-    "# Combine for consistent processing\n",
+    "\n",
     "train['is_train'] = 1\n",
     "test['is_train'] = 0\n",
     "test['retention_status'] = 'Unknown'\n",
     "combined = pd.concat([train, test], axis=0)\n",
     "\n",
-    "# --- 2. FORENSIC PRE-PROCESSING ---\n",
     "\n",
-    "# A. DROP THE NOISE (Kill List)\n",
+    "\n",
+    "\n",
     "cols_to_drop = [\n",
     "    'founder_id', 'founder_role', 'leadership_scope',\n",
     "    'founder_visibility', 'innovation_support', 'team_size_category'\n",
     "]\n",
     "combined = combined.drop(columns=cols_to_drop)\n",
     "\n",
-    "# B. FIX SKEW (Log-transform revenue)\n",
+    "\n",
     "combined['monthly_revenue_generated'] = np.log1p(\n",
     "    combined['monthly_revenue_generated'].fillna(\n",
     "        combined['monthly_revenue_generated'].median()\n",
     "    )\n",
     ")\n",
     "\n",
-    "# C. IMPUTE MISSING VALUES\n",
+    "# . IMPUTE MISSING VALUES\n",
     "combined['years_since_founding'] = combined['years_since_founding'].fillna(\n",
     "    combined['years_since_founding'].median()\n",
     ")\n",
@@ -87,7 +77,7 @@
     "    drop_first=True\n",
     ")\n",
     "\n",
-    "# --- 3. RE-SPLIT INTO TRAIN AND TEST & SCALE ---\n",
+    "\n",
     "train_final = combined[combined['is_train'] == 1].drop(columns=['is_train'])\n",
     "test_final = combined[combined['is_train'] == 0].drop(columns=['is_train', 'retention_status'])\n",
     "\n",
@@ -101,7 +91,7 @@
     "scaler = StandardScaler()\n",
     "X_scaled = scaler.fit_transform(X)\n",
     "X_submit_scaled = scaler.transform(X_submit)\n",
-    "#i want to print how new data looks like like shape and all\n",
+    "\n",
     "print(\"Training data shape:\", X_scaled.shape)\n",
     "print(\"Submission data shape:\", X_submit_scaled.shape)\n"
    ]
