--- a/Models/Stack_P4.ipynb
+++ b/Models/Stack_P4.ipynb
@@ -138,9 +138,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "MlLab",
+   "display_name": "Python (MlLab)",
    "language": "python",
-   "name": "python3"
+   "name": "mllab"
   },
   "language_info": {
    "codemirror_mode": {
